--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1,13 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-   ],
    "source": [
     "##Importação de Libs"
    ]
@@ -26,22 +23,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-   ],
    "source": [
-    "##Carregamento img"
+    "##Carregamento img\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -70,36 +66,6 @@
     "\n",
     "plt.imshow(img)\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ola\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"ola\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-   ],
-   "source": [
    ]
   }
  ],
